--- a/dup_anal.ipynb
+++ b/dup_anal.ipynb
@@ -264,7 +264,7 @@
     "\n",
     "My algorithm, converting vector to the Binary Tree, is very unoptimized. As we see, there are a lot of duplicates. Fortunately, there are no more than two same numbers in the tree, and all duplicated numbers are leaves. There will not be a problem to clean up the tree from duplicated numbers.\n",
     "\n",
-    "You can fing implimentation in *bi_tree.h* in _'static STRUC* gen_triple(int* iarr, int start, int finish)'_ function.\n",
+    "You can fing implimentation in *bi_tree.h* in <i>'static STRUC* gen_triple(int* iarr, int start, int finish)'</i> function.\n",
     "\n",
     "With next steps you will see how do I work with the Binary tree."
    ]
