1bug count fixed, min max edited, SPELL CHACK

--- a/dup_fun.ipynb
+++ b/dup_fun.ipynb
@@ -111,7 +111,7 @@
     "\n",
     "outfile.close()\n",
     "del(outfile)\n",
-    "#del(rand_arr)\n",
+    "del(rand_arr)\n",
     "del(t)\n",
     "\n",
     "!wc -l size_dup.txt;"
@@ -604,7 +604,7 @@
     "### Min-Max frequancy\n",
     "\n",
     "How its seen, local minimum could be found : $ƒ(x)=2^{x+2}-1$ ; $x ∈ N$; <br>\n",
-    "Lockal maximum could be found : $ƒ(x)=5+\\sum_{i=2}^{x}6*(i-1)$ ; $x ∈ N$;"
+    "Local maximum could be found : $ƒ(x)=5+\\sum_{i=2}^{x}6*(i-1)$ ; $x ∈ N$;"
    ]
   },
   {
