--- a/dup_fun.ipynb
+++ b/dup_fun.ipynb
@@ -334,7 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of lockal mins : 7\n"
+      "Number of local mins : 7\n"
      ]
     },
     {
@@ -453,7 +453,7 @@
    "source": [
     "dfMin = dDup[(dDup['Dup'] == 0) & (dDup['Der'] == 0)]\n",
     "dfMin = dfMin.reset_index(drop=True)\n",
-    "print(\"Number of lockal mins :\", dfMin.shape[0])\n",
+    "print(\"Number of local mins :\", dfMin.shape[0])\n",
     "dfMin['Min_Range'] = dfMin['Len'].diff()\n",
     "dfMin.tail(10)"
    ]
@@ -464,6 +464,13 @@
    "id": "71fe77fb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of local maxs : 8\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -592,6 +599,7 @@
     "dfMax = dDup[(dDup['Der'] >= 0) & (dDup['Der_Nxt'] < 0)]\n",
     "dfMax = dfMax.drop(columns=['Der_Nxt'])\n",
     "dfMax = dfMax.reset_index(drop=True)\n",
+    "print(\"Number of local maxs :\", dfMax.shape[0])\n",
     "dfMax['Max_Range'] = dfMax['Len'].diff()\n",
     "dfMax.tail(10)"
    ]
@@ -632,9 +640,9 @@
     "\n",
     "This algorithm does not have constant complexity, and the amount of duplicates changes linearly with increasing number of inputs. \n",
     "\n",
-    "You can find implementation in <i>bi_tree.h</i> in <i><b>STRUC* gen_triple(int* iarr, int start, int finish);</b></i> function. Deleting of duplicates could be found in <i>bi_tree.h</i> in <i><b>void del_dup(T *root, Y *out);</b></i> function.\n",
+    "You can find implementation in <i>bi_tree.h</i> in <i><b>tb_node* gen_triple(int* iarr, int start, int finish);</b></i> function. Deleting of duplicates could be found in <i>bi_tree.h</i> in <i><b>void del_dup(T *root, Y *out);</b></i> function.\n",
     "\n",
-    "With next steps you will see how do I work with the Binary tree."
+    "With next steps you will see how do I work with the Binary Tree Class."
    ]
   }
  ],
