dups finished, class next

--- a/dup_fun.ipynb
+++ b/dup_fun.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "Setup random generator:\n",
     "*  <b>start</b> : number of elements for the shortest first set (min>=3)\n",
-    "*  <b>stop</b> : number of elements for the longest las set (max<=1001). Limited with number of arguments of binary file\n",
+    "*  <b>stop</b> : number of elements for the longest last set (max<=1001). Limited with number of arguments of binary file\n",
     "*  <b>step</b> : increment from <i>start</i> to <i>stop</i>"
    ]
   },
@@ -67,21 +67,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(998,)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of sets :  998\n"
+     ]
     }
    ],
    "source": [
     "Obj1 = gen_rand.Rand_set(start, stop, step)\n",
     "rand_arr = Obj1.gen_rand_prnt(ret=1)\n",
     "del(Obj1)\n",
-    "rand_arr.shape"
+    "print(\"Number of sets : \", rand_arr.shape[0])"
    ]
   },
   {
@@ -113,6 +110,7 @@
     "del(outfile)\n",
     "del(rand_arr)\n",
     "del(t)\n",
+    "del(i)\n",
     "\n",
     "!wc -l size_dup.txt;"
    ]
@@ -126,7 +124,7 @@
     "Working with data:\n",
     "*  Make dataframe(df) from 'size_dup.txt' file\n",
     "*  Add one more column to df with percentage of duplicates in input\n",
-    "*  Print three drawings :\n",
+    "*  Print four drawings :\n",
     "    * Number of inputs vs amount of duplicates\n",
     "    * Number of inputs vs percentage of duplicates\n",
     "    * Percentage histogram\n",
@@ -230,7 +228,7 @@
     "dDup = pd.read_table(\"size_dup.txt\", delimiter=\" \", index_col=False)\n",
     "dDup['Perc'] = (dDup['Dup'] / dDup['Len']) * 1000\n",
     "dDup['Perc'] = dDup['Perc'].astype(int) / 10\n",
-    "dDup['Der'] = dDup['Dup'].diff() / step\n",
+    "dDup['Der'] = dDup['Dup'].diff() # / step\n",
     "dDup['d_Perc'] = dDup['Perc'].diff()\n",
     "dDup.tail(5)"
    ]
@@ -245,7 +243,7 @@
     "*  <b>Fig 1</b> : Graphic showing amount of duplicates vs length of inputs.\n",
     "*  <b>Fig 2</b> : Graphic showing percentage of duplicates vs length of inputs.\n",
     "*  <b>Fig 3</b> : Graphic showing how often we meet duplicates.\n",
-    "*  <b>Fig 4</b> : Graphc showing how changes (derivative) amount of duplicates with growing amount of inputs."
+    "*  <b>Fig 4</b> : Graphic showing how changes (derivative) amount of duplicates with growing amount of inputs."
    ]
   },
   {
@@ -319,9 +317,9 @@
    "source": [
     "### Critical points\n",
     "\n",
-    "We will observe case with <i>start=3 ; stop=1001; step=1</i>.\n",
-    "\n",
-    "We will examine my set-to-tree algorithm for local extremas. To find local minimums we will just find rows with 0 duplicates and derivative. To find local maximums we will find points in which $ƒ'(Len)≥0$ and $ƒ'(Len+1)<0$."
+    "We will examine my set-to-tree algorithm for local extremas. <br>\n",
+    "To find local minimums we will find points in which $f'(Len)≤0$ and $f'(Len+1)>0$  <br>\n",
+    "To find local maximums we will find points in which $ƒ'(Len)≥0$ and $ƒ'(Len+1)<0$"
    ]
   },
   {
@@ -363,6 +361,7 @@
        "      <th>Perc</th>\n",
        "      <th>Der</th>\n",
        "      <th>d_Perc</th>\n",
+       "      <th>Der_Nxt</th>\n",
        "      <th>Min_Range</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -374,6 +373,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -383,6 +383,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -392,6 +393,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>16.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -401,6 +403,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>32.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -410,6 +413,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>64.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -419,6 +423,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>128.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -428,6 +433,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>256.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -435,14 +441,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   Len  Dup  Perc  Der  d_Perc  Min_Range\n",
-       "0    7    0   0.0  0.0     0.0        NaN\n",
-       "1   15    0   0.0  0.0     0.0        8.0\n",
-       "2   31    0   0.0  0.0     0.0       16.0\n",
-       "3   63    0   0.0  0.0     0.0       32.0\n",
-       "4  127    0   0.0  0.0     0.0       64.0\n",
-       "5  255    0   0.0  0.0     0.0      128.0\n",
-       "6  511    0   0.0  0.0     0.0      256.0"
+       "   Len  Dup  Perc  Der  d_Perc  Der_Nxt  Min_Range\n",
+       "0    7    0   0.0  0.0     0.0      1.0        NaN\n",
+       "1   15    0   0.0  0.0     0.0      1.0        8.0\n",
+       "2   31    0   0.0  0.0     0.0      1.0       16.0\n",
+       "3   63    0   0.0  0.0     0.0      1.0       32.0\n",
+       "4  127    0   0.0  0.0     0.0      1.0       64.0\n",
+       "5  255    0   0.0  0.0     0.0      1.0      128.0\n",
+       "6  511    0   0.0  0.0     0.0      1.0      256.0"
       ]
      },
      "execution_count": 7,
@@ -451,7 +457,8 @@
     }
    ],
    "source": [
-    "dfMin = dDup[(dDup['Dup'] == 0) & (dDup['Der'] == 0)]\n",
+    "dDup['Der_Nxt'] = dDup['Der'].shift(-1)\n",
+    "dfMin = dDup[(dDup['Der'] <= 0) & (dDup['Der_Nxt'] > 0)]\n",
     "dfMin = dfMin.reset_index(drop=True)\n",
     "print(\"Number of local mins :\", dfMin.shape[0])\n",
     "dfMin['Min_Range'] = dfMin['Len'].diff()\n",
@@ -595,7 +602,7 @@
     }
    ],
    "source": [
-    "dDup['Der_Nxt'] = dDup['Der'].shift(-1)\n",
+    "\n",
     "dfMax = dDup[(dDup['Der'] >= 0) & (dDup['Der_Nxt'] < 0)]\n",
     "dfMax = dfMax.drop(columns=['Der_Nxt'])\n",
     "dfMax = dfMax.reset_index(drop=True)\n",
@@ -609,10 +616,12 @@
    "id": "a5d5dc5d",
    "metadata": {},
    "source": [
-    "### Min-Max frequancy\n",
+    "### Min-Max frequency\n",
     "\n",
+    "We will observe case with <i>start=3 ; stop=1001; step=1</i>.<br>\n",
+    "<br>\n",
     "How its seen, local minimum could be found : $ƒ(x)=2^{x+2}-1$ ; $x ∈ N$; <br>\n",
-    "Local maximum could be found : $ƒ(x)=5+\\sum_{i=2}^{x}6*(i-1)$ ; $x ∈ N$;"
+    "Local maximum could be found : $ƒ(x)=5+\\sum_{i=1}^{x}6*(i-1)$ ; $x ∈ N$;"
    ]
   },
   {
@@ -642,7 +651,7 @@
     "\n",
     "You can find implementation in <i>bi_tree.h</i> in <i><b>tb_node* gen_triple(int* iarr, int start, int finish);</b></i> function. Deleting of duplicates could be found in <i>bi_tree.h</i> in <i><b>void del_dup(T *root, Y *out);</b></i> function.\n",
     "\n",
-    "With next steps you will see how do I work with the Binary Tree Class."
+    "With next steps you will see how I work with the Binary Tree Class."
    ]
   }
  ],
