dups finished, class next3

--- a/dup_fun.ipynb
+++ b/dup_fun.ipynb
@@ -367,7 +367,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>7</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -377,7 +377,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>15</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -387,7 +387,7 @@
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>31</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -397,7 +397,7 @@
        "      <td>16.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>63</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -407,7 +407,7 @@
        "      <td>32.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>127</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -417,7 +417,7 @@
        "      <td>64.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>255</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -427,7 +427,7 @@
        "      <td>128.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>511</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -442,13 +442,13 @@
       ],
       "text/plain": [
        "   Len  Dup  Perc  Der  d_Perc  Der_Nxt  Min_Range\n",
-       "0    7    0   0.0  0.0     0.0      1.0        NaN\n",
-       "1   15    0   0.0  0.0     0.0      1.0        8.0\n",
-       "2   31    0   0.0  0.0     0.0      1.0       16.0\n",
-       "3   63    0   0.0  0.0     0.0      1.0       32.0\n",
-       "4  127    0   0.0  0.0     0.0      1.0       64.0\n",
-       "5  255    0   0.0  0.0     0.0      1.0      128.0\n",
-       "6  511    0   0.0  0.0     0.0      1.0      256.0"
+       "1    7    0   0.0  0.0     0.0      1.0        NaN\n",
+       "2   15    0   0.0  0.0     0.0      1.0        8.0\n",
+       "3   31    0   0.0  0.0     0.0      1.0       16.0\n",
+       "4   63    0   0.0  0.0     0.0      1.0       32.0\n",
+       "5  127    0   0.0  0.0     0.0      1.0       64.0\n",
+       "6  255    0   0.0  0.0     0.0      1.0      128.0\n",
+       "7  511    0   0.0  0.0     0.0      1.0      256.0"
       ]
      },
      "execution_count": 7,
@@ -460,6 +460,7 @@
     "dDup['Der_Nxt'] = dDup['Der'].shift(-1)\n",
     "dfMin = dDup[(dDup['Der'] <= 0) & (dDup['Der_Nxt'] > 0)]\n",
     "dfMin = dfMin.reset_index(drop=True)\n",
+    "dfMin.index += 1\n",
     "print(\"Number of local mins :\", dfMin.shape[0])\n",
     "dfMin['Min_Range'] = dfMin['Len'].diff()\n",
     "dfMin.tail(10)"
@@ -621,7 +622,7 @@
     "We will observe case with <i>start=3 ; stop=1001; step=1</i>.<br>\n",
     "<br>\n",
     "How its seen, local minimum could be found : $ƒ(x)=2^{x+2}-1$ ; $x ∈ N$; <br>\n",
-    "Local maximum could be found : $ƒ(x)=5+\\sum_{i=1}^{x}6*(i-1)$ ; $x ∈ N$;"
+    "Local maximum could be found : $ƒ(x)=2+3*\\sum_{k=1}^{x}2^{k-1}$ ; $x ∈ N$;"
    ]
   },
   {
