dups finished, class next4

--- a/dup_fun.ipynb
+++ b/dup_fun.ipynb
@@ -510,7 +510,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>20.0</td>\n",
@@ -519,7 +519,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>11</td>\n",
        "      <td>3</td>\n",
        "      <td>27.2</td>\n",
@@ -528,7 +528,7 @@
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
        "      <td>30.4</td>\n",
@@ -537,7 +537,7 @@
        "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>47</td>\n",
        "      <td>15</td>\n",
        "      <td>31.9</td>\n",
@@ -546,7 +546,7 @@
        "      <td>24.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>95</td>\n",
        "      <td>31</td>\n",
        "      <td>32.6</td>\n",
@@ -555,7 +555,7 @@
        "      <td>48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>191</td>\n",
        "      <td>63</td>\n",
        "      <td>32.9</td>\n",
@@ -564,7 +564,7 @@
        "      <td>96.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>383</td>\n",
        "      <td>127</td>\n",
        "      <td>33.1</td>\n",
@@ -573,7 +573,7 @@
        "      <td>192.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>767</td>\n",
        "      <td>255</td>\n",
        "      <td>33.2</td>\n",
@@ -587,14 +587,14 @@
       ],
       "text/plain": [
        "   Len  Dup  Perc  Der  d_Perc  Max_Range\n",
-       "0    5    1  20.0  0.0    -5.0        NaN\n",
-       "1   11    3  27.2  0.0    -2.8        6.0\n",
-       "2   23    7  30.4  0.0    -1.4       12.0\n",
-       "3   47   15  31.9  0.0    -0.7       24.0\n",
-       "4   95   31  32.6  0.0    -0.3       48.0\n",
-       "5  191   63  32.9  0.0    -0.2       96.0\n",
-       "6  383  127  33.1  0.0    -0.1      192.0\n",
-       "7  767  255  33.2  0.0     0.0      384.0"
+       "1    5    1  20.0  0.0    -5.0        NaN\n",
+       "2   11    3  27.2  0.0    -2.8        6.0\n",
+       "3   23    7  30.4  0.0    -1.4       12.0\n",
+       "4   47   15  31.9  0.0    -0.7       24.0\n",
+       "5   95   31  32.6  0.0    -0.3       48.0\n",
+       "6  191   63  32.9  0.0    -0.2       96.0\n",
+       "7  383  127  33.1  0.0    -0.1      192.0\n",
+       "8  767  255  33.2  0.0     0.0      384.0"
       ]
      },
      "execution_count": 8,
@@ -607,6 +607,7 @@
     "dfMax = dDup[(dDup['Der'] >= 0) & (dDup['Der_Nxt'] < 0)]\n",
     "dfMax = dfMax.drop(columns=['Der_Nxt'])\n",
     "dfMax = dfMax.reset_index(drop=True)\n",
+    "dfMax.index += 1\n",
     "print(\"Number of local maxs :\", dfMax.shape[0])\n",
     "dfMax['Max_Range'] = dfMax['Len'].diff()\n",
     "dfMax.tail(10)"
