dups finished, class next4

--- a/dup_fun.ipynb
+++ b/dup_fun.ipynb
@@ -505,6 +505,7 @@
        "      <th>Perc</th>\n",
        "      <th>Der</th>\n",
        "      <th>d_Perc</th>\n",
+       "      <th>Der_Nxt</th>\n",
        "      <th>Max_Range</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -516,6 +517,7 @@
        "      <td>20.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-5.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -525,6 +527,7 @@
        "      <td>27.2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-2.8</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -534,6 +537,7 @@
        "      <td>30.4</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.4</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -543,6 +547,7 @@
        "      <td>31.9</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.7</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>24.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -552,6 +557,7 @@
        "      <td>32.6</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.3</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -561,6 +567,7 @@
        "      <td>32.9</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.2</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>96.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -570,6 +577,7 @@
        "      <td>33.1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.1</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>192.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -579,6 +587,7 @@
        "      <td>33.2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>384.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -586,15 +595,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Len  Dup  Perc  Der  d_Perc  Max_Range\n",
-       "1    5    1  20.0  0.0    -5.0        NaN\n",
-       "2   11    3  27.2  0.0    -2.8        6.0\n",
-       "3   23    7  30.4  0.0    -1.4       12.0\n",
-       "4   47   15  31.9  0.0    -0.7       24.0\n",
-       "5   95   31  32.6  0.0    -0.3       48.0\n",
-       "6  191   63  32.9  0.0    -0.2       96.0\n",
-       "7  383  127  33.1  0.0    -0.1      192.0\n",
-       "8  767  255  33.2  0.0     0.0      384.0"
+       "   Len  Dup  Perc  Der  d_Perc  Der_Nxt  Max_Range\n",
+       "1    5    1  20.0  0.0    -5.0     -1.0        NaN\n",
+       "2   11    3  27.2  0.0    -2.8     -1.0        6.0\n",
+       "3   23    7  30.4  0.0    -1.4     -1.0       12.0\n",
+       "4   47   15  31.9  0.0    -0.7     -1.0       24.0\n",
+       "5   95   31  32.6  0.0    -0.3     -1.0       48.0\n",
+       "6  191   63  32.9  0.0    -0.2     -1.0       96.0\n",
+       "7  383  127  33.1  0.0    -0.1     -1.0      192.0\n",
+       "8  767  255  33.2  0.0     0.0     -1.0      384.0"
       ]
      },
      "execution_count": 8,
@@ -605,7 +614,6 @@
    "source": [
     "\n",
     "dfMax = dDup[(dDup['Der'] >= 0) & (dDup['Der_Nxt'] < 0)]\n",
-    "dfMax = dfMax.drop(columns=['Der_Nxt'])\n",
     "dfMax = dfMax.reset_index(drop=True)\n",
     "dfMax.index += 1\n",
     "print(\"Number of local maxs :\", dfMax.shape[0])\n",
