--- a/dup_fun.ipynb
+++ b/dup_fun.ipynb
@@ -51,9 +51,19 @@
    "execution_count": 2,
    "id": "027502e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm -f size_dup.txt\n",
+      "echo \"Len Dup\" >> size_dup.txt;\n",
+      "c++ dups.cpp -Wall -Werror -Wextra -std=c++20 -o gen_bi_tree\n"
+     ]
+    }
+   ],
    "source": [
-    "!sh comp.sh;\n",
+    "!make bi;\n",
     "\n",
     "start = 3\n",
     "stop  = 1001\n",
@@ -96,9 +106,6 @@
     }
    ],
    "source": [
-    "!rm -f size_dup.txt;\n",
-    "!echo \"Len Dup\" >> size_dup.txt;\n",
-    "\n",
     "with open('size_dup.txt', \"a\") as outfile:\n",
     "    for i in rand_arr:\n",
     "        t = np.array2string(np.array(list(i)))[1:-1]\n",
