--- a/dup_fun.ipynb
+++ b/dup_fun.ipynb
@@ -56,14 +56,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm -f size_dup.txt\n",
+      "rm -f size_dup.txt gen_bi_tree\n",
       "echo \"Len Dup\" >> size_dup.txt;\n",
       "c++ dups.cpp -Wall -Werror -Wextra -std=c++20 -o gen_bi_tree\n"
      ]
     }
    ],
    "source": [
-    "!make bi;\n",
+    "!make rebi;\n",
     "\n",
     "start = 3\n",
     "stop  = 1001\n",
