py tree ready to plot

--- a/py_analog/py_lab.ipynb
+++ b/py_analog/py_lab.ipynb
@@ -133,6 +133,37 @@
    "source": [
     "BT_Obj.print_tree()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c3e4146a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(13, 4),\n",
+       " (10, 3),\n",
+       " (17, 3),\n",
+       " (15, 2),\n",
+       " (23, 4),\n",
+       " (27, 4),\n",
+       " (25, 3),\n",
+       " (32, 4),\n",
+       " (35, 3),\n",
+       " (30, 2),\n",
+       " (20, 1)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(BT_Obj.l_plot())"
+   ]
   }
  ],
  "metadata": {
