--- a/dup_fun.ipynb
+++ b/dup_fun.ipynb
@@ -56,14 +56,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm -f size_dup.txt gen_bi_tree\n",
-      "echo \"Len Dup\" >> size_dup.txt;\n",
-      "c++ dups.cpp -Wall -Werror -Wextra -std=c++20 -o gen_bi_tree\n"
+      "rm -f bin/l_list \n",
+      "c++ cpp_src/linked_list.cpp -Wall -Werror -Wextra -std=c++20 -o bin/l_list\n"
      ]
     }
    ],
    "source": [
-    "!make rebi;\n",
+    "!make rell;\n",
     "\n",
     "start = 3\n",
     "stop  = 1001\n",
@@ -109,7 +108,7 @@
     "with open('size_dup.txt', \"a\") as outfile:\n",
     "    for i in rand_arr:\n",
     "        t = np.array2string(np.array(list(i)))[1:-1]\n",
-    "        t = \"./gen_bi_tree \" + t\n",
+    "        t = \"./bin/gen_bi_tree \" + t\n",
     "        t = shlex.split(t)\n",
     "        subprocess.run(t, stdout=outfile)\n",
     "\n",
