--- a/bt_analise.ipynb
+++ b/bt_analise.ipynb
@@ -22,7 +22,7 @@
     "import subprocess\n",
     "import shlex\n",
     "# My module\n",
-    "import gen_rand\n",
+    "from py_analog import gen_rand\n",
     "from fileinput import close\n",
     "\n",
     "print(\"START\")"
@@ -86,7 +86,7 @@
    ],
    "source": [
     "Obj1 = gen_rand.Rand_set(start, stop, step)\n",
-    "rand_arr = Obj1.gen_rand_prnt(ret=1)\n",
+    "rand_arr = Obj1.gen_rand_print(ret=1)\n",
     "del(Obj1)\n",
     "print(\"Number of sets : \", rand_arr.shape[0])"
    ]
