--- a/bt_analise.ipynb
+++ b/bt_analise.ipynb
@@ -56,9 +56,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm -f size_dup.txt bin/struct_bt\n",
+      "rm -f size_dup.txt bin/st_bt\n",
       "echo \"Len Dup\" >> size_dup.txt;\n",
-      "c++ cpp_src/st_dups.cpp -Wall -Werror -Wextra -std=c++20 -o bin/struct_bt\n"
+      "c++ cpp_src/st_bt.cpp -Wall -Werror -Wextra -std=c++20 -o bin/st_bt\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     "with open('size_dup.txt', \"a\") as outfile:\n",
     "    for i in rand_arr:\n",
     "        t = np.array2string(np.array(list(i)))[1:-1]\n",
-    "        t = \"./bin/struct_bt \" + t\n",
+    "        t = \"./bin/st_bt \" + t\n",
     "        t = shlex.split(t)\n",
     "        subprocess.run(t, stdout=outfile)\n",
     "\n",
