--- a/bt_analise.ipynb
+++ b/bt_analise.ipynb
@@ -319,6 +319,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b8fa4321",
    "metadata": {},
@@ -327,7 +328,7 @@
     "\n",
     "We will examine my set-to-tree algorithm for local extremas. <br>\n",
     "To find local minimums we will find points in which $f'(Len)≤0$ and $f'(Len+1)>0$  <br>\n",
-    "To find local maximums we will find points in which $ƒ'(Len)≥0$ and $ƒ'(Len+1)<0$"
+    "To find local maximums we will find points in which $f'(Len)≥0$ and $f'(Len+1)<0$"
    ]
   },
   {
